# template-python

./: .coverage  pyproject.toml
lab/: lab.py
