[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = ["RogerioFabricio <rogeriofabricio.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.2.5"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff"
docs = "mkdocs serve --dev-addr 127.0.0.1:8087"
pre-test = "task lint"
test = "pytest -s -x --cov=template_python -vv"
post-test = "coverage html"